[gd_scene load_steps=3 format=3 uid="uid://6b8ay2nlpths"]

[ext_resource type="Environment" uid="uid://b1lxmub3dbd84" path="res://addons/test_camera_3d/default_test_environment.tres" id="1_h3v17"]
[ext_resource type="Script" path="res://addons/test_camera_3d/test_camera.gd" id="2_8uys3"]

[node name="_test_camera_3d_" type="Camera3D"]
environment = ExtResource("1_h3v17")
current = true
script = ExtResource("2_8uys3")

[node name="MarginContainer" type="MarginContainer" parent="."]
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -121.0
offset_top = -28.0
grow_horizontal = 0
grow_vertical = 0
theme_override_constants/margin_right = 15
theme_override_constants/margin_bottom = 7

[node name="CameraLabel" type="Label" parent="MarginContainer"]
layout_mode = 2
size_flags_horizontal = 4
theme_override_colors/font_color = Color(1, 1, 0.345098, 1)
theme_override_colors/font_shadow_color = Color(0, 0, 0, 0.454902)
theme_override_constants/shadow_offset_x = 1
theme_override_constants/shadow_offset_y = 1
theme_override_constants/shadow_outline_size = 1
theme_override_font_sizes/font_size = 25
text = "Test Camera"
horizontal_alignment = 2
vertical_alignment = 2

[node name="MarginContainer2" type="MarginContainer" parent="."]
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_top = -40.0
offset_right = 40.0
grow_vertical = 0
theme_override_constants/margin_left = 10
theme_override_constants/margin_bottom = 5

[node name="InputGuide" type="GridContainer" parent="MarginContainer2"]
layout_mode = 2
theme_override_constants/h_separation = 10
columns = 2

[node name="UpArrow" type="Label" parent="MarginContainer2/InputGuide"]
layout_mode = 2
theme_override_colors/font_color = Color(1, 1, 0.345098, 1)
theme_override_colors/font_shadow_color = Color(0, 0, 0, 0.454902)
theme_override_constants/shadow_offset_x = 1
theme_override_constants/shadow_offset_y = 1
theme_override_constants/shadow_outline_size = 1
theme_override_font_sizes/font_size = 12
text = "↑"

[node name="UpInput" type="Label" parent="MarginContainer2/InputGuide"]
unique_name_in_owner = true
layout_mode = 2
theme_override_colors/font_color = Color(1, 1, 0.345098, 1)
theme_override_colors/font_shadow_color = Color(0, 0, 0, 0.454902)
theme_override_constants/shadow_offset_x = 1
theme_override_constants/shadow_offset_y = 1
theme_override_constants/shadow_outline_size = 1
theme_override_font_sizes/font_size = 12

[node name="DownArrow" type="Label" parent="MarginContainer2/InputGuide"]
layout_mode = 2
theme_override_colors/font_color = Color(1, 1, 0.345098, 1)
theme_override_colors/font_shadow_color = Color(0, 0, 0, 0.454902)
theme_override_constants/shadow_offset_x = 1
theme_override_constants/shadow_offset_y = 1
theme_override_constants/shadow_outline_size = 1
theme_override_font_sizes/font_size = 12
text = "↓"

[node name="DownInput" type="Label" parent="MarginContainer2/InputGuide"]
unique_name_in_owner = true
layout_mode = 2
theme_override_colors/font_color = Color(1, 1, 0.345098, 1)
theme_override_colors/font_shadow_color = Color(0, 0, 0, 0.454902)
theme_override_constants/shadow_offset_x = 1
theme_override_constants/shadow_offset_y = 1
theme_override_constants/shadow_outline_size = 1
theme_override_font_sizes/font_size = 12

[node name="LeftArrow" type="Label" parent="MarginContainer2/InputGuide"]
layout_mode = 2
theme_override_colors/font_color = Color(1, 1, 0.345098, 1)
theme_override_colors/font_shadow_color = Color(0, 0, 0, 0.454902)
theme_override_constants/shadow_offset_x = 1
theme_override_constants/shadow_offset_y = 1
theme_override_constants/shadow_outline_size = 1
theme_override_font_sizes/font_size = 12
text = "←"

[node name="LeftInput" type="Label" parent="MarginContainer2/InputGuide"]
unique_name_in_owner = true
layout_mode = 2
theme_override_colors/font_color = Color(1, 1, 0.345098, 1)
theme_override_colors/font_shadow_color = Color(0, 0, 0, 0.454902)
theme_override_constants/shadow_offset_x = 1
theme_override_constants/shadow_offset_y = 1
theme_override_constants/shadow_outline_size = 1
theme_override_font_sizes/font_size = 12

[node name="RightArrow" type="Label" parent="MarginContainer2/InputGuide"]
layout_mode = 2
theme_override_colors/font_color = Color(1, 1, 0.345098, 1)
theme_override_colors/font_shadow_color = Color(0, 0, 0, 0.454902)
theme_override_constants/shadow_offset_x = 1
theme_override_constants/shadow_offset_y = 1
theme_override_constants/shadow_outline_size = 1
theme_override_font_sizes/font_size = 12
text = "↑"

[node name="RightInput" type="Label" parent="MarginContainer2/InputGuide"]
unique_name_in_owner = true
layout_mode = 2
theme_override_colors/font_color = Color(1, 1, 0.345098, 1)
theme_override_colors/font_shadow_color = Color(0, 0, 0, 0.454902)
theme_override_constants/shadow_offset_x = 1
theme_override_constants/shadow_offset_y = 1
theme_override_constants/shadow_outline_size = 1
theme_override_font_sizes/font_size = 12

[node name="ZoomIn" type="Label" parent="MarginContainer2/InputGuide"]
layout_mode = 2
theme_override_colors/font_color = Color(1, 1, 0.345098, 1)
theme_override_colors/font_shadow_color = Color(0, 0, 0, 0.454902)
theme_override_constants/shadow_offset_x = 1
theme_override_constants/shadow_offset_y = 1
theme_override_constants/shadow_outline_size = 1
theme_override_font_sizes/font_size = 12
text = "Zoom In"

[node name="ZoomInInput" type="Label" parent="MarginContainer2/InputGuide"]
unique_name_in_owner = true
layout_mode = 2
theme_override_colors/font_color = Color(1, 1, 0.345098, 1)
theme_override_colors/font_shadow_color = Color(0, 0, 0, 0.454902)
theme_override_constants/shadow_offset_x = 1
theme_override_constants/shadow_offset_y = 1
theme_override_constants/shadow_outline_size = 1
theme_override_font_sizes/font_size = 12

[node name="ZoomOut" type="Label" parent="MarginContainer2/InputGuide"]
layout_mode = 2
theme_override_colors/font_color = Color(1, 1, 0.345098, 1)
theme_override_colors/font_shadow_color = Color(0, 0, 0, 0.454902)
theme_override_constants/shadow_offset_x = 1
theme_override_constants/shadow_offset_y = 1
theme_override_constants/shadow_outline_size = 1
theme_override_font_sizes/font_size = 12
text = "Zoom Out"

[node name="ZoomOutInput" type="Label" parent="MarginContainer2/InputGuide"]
unique_name_in_owner = true
layout_mode = 2
theme_override_colors/font_color = Color(1, 1, 0.345098, 1)
theme_override_colors/font_shadow_color = Color(0, 0, 0, 0.454902)
theme_override_constants/shadow_offset_x = 1
theme_override_constants/shadow_offset_y = 1
theme_override_constants/shadow_outline_size = 1
theme_override_font_sizes/font_size = 12

[node name="FollowToggle" type="Label" parent="MarginContainer2/InputGuide"]
unique_name_in_owner = true
custom_minimum_size = Vector2(140, 0)
layout_mode = 2
theme_override_colors/font_color = Color(1, 1, 0.345098, 1)
theme_override_colors/font_shadow_color = Color(0, 0, 0, 0.454902)
theme_override_constants/shadow_offset_x = 1
theme_override_constants/shadow_offset_y = 1
theme_override_constants/shadow_outline_size = 1
theme_override_font_sizes/font_size = 12
text = "Unfollow Scene Root"

[node name="FollowToggleInput" type="Label" parent="MarginContainer2/InputGuide"]
unique_name_in_owner = true
layout_mode = 2
theme_override_colors/font_color = Color(1, 1, 0.345098, 1)
theme_override_colors/font_shadow_color = Color(0, 0, 0, 0.454902)
theme_override_constants/shadow_offset_x = 1
theme_override_constants/shadow_offset_y = 1
theme_override_constants/shadow_outline_size = 1
theme_override_font_sizes/font_size = 12

[node name="GridToggle" type="Label" parent="MarginContainer2/InputGuide"]
unique_name_in_owner = true
custom_minimum_size = Vector2(140, 0)
layout_mode = 2
theme_override_colors/font_color = Color(1, 1, 0.345098, 1)
theme_override_colors/font_shadow_color = Color(0, 0, 0, 0.454902)
theme_override_constants/shadow_offset_x = 1
theme_override_constants/shadow_offset_y = 1
theme_override_constants/shadow_outline_size = 1
theme_override_font_sizes/font_size = 12
text = "Show Grid"

[node name="GridToggleInput" type="Label" parent="MarginContainer2/InputGuide"]
unique_name_in_owner = true
layout_mode = 2
theme_override_colors/font_color = Color(1, 1, 0.345098, 1)
theme_override_colors/font_shadow_color = Color(0, 0, 0, 0.454902)
theme_override_constants/shadow_offset_x = 1
theme_override_constants/shadow_offset_y = 1
theme_override_constants/shadow_outline_size = 1
theme_override_font_sizes/font_size = 12

[node name="PhysicalSkyLight" type="DirectionalLight3D" parent="."]
transform = Transform3D(0.873288, 0.262549, -0.41041, 0, 0.842377, 0.538888, 0.487204, -0.470605, 0.735638, 0, 0, 0)
